--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -4,41 +4,62 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>
-      Home
+      Questions
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-    <ion-card class="welcome-card">
-      <ion-img src="/assets/shapes.svg"></ion-img>
-      <ion-card-header>
-        <ion-card-subtitle>Get Started</ion-card-subtitle>
-        <ion-card-title>Welcome to Ionic</ion-card-title>
-      </ion-card-header>
-      <ion-card-content>
-        <p>Now that your app has been created, you'll want to start building out features and components. Check out some of the resources below for next steps.</p>
-      </ion-card-content>
-    </ion-card>
-    <ion-list lines="none">
-      <ion-list-header>
-        <ion-label>Resources</ion-label>
-      </ion-list-header>
-      <ion-item href="https://ionicframework.com/docs/">
-        <ion-icon slot="start" color="medium" name="book"></ion-icon>
-        <ion-label>Ionic Documentation</ion-label>
+  <ion-list>
+    <ion-list-header class="ion-text-center">
+      <ion-label style="color: #21B952" class="list-title">
+        Questions.
+      </ion-label>
+    </ion-list-header>
+    <hr>
+    <!-- Multi-line sliding item with icon options on both sides -->
+    <ion-item-sliding *ngFor="let question of questionService._questions">
+      <ion-item *ngIf="!question.archived"> 
+        <ion-label  (click)="selectQuestion(question, question.id)">
+          <h2> <strong> {{question.question}} </strong></h2>
+          <p *ngIf="question.answered" class="question-description" color="primary"> This Question has been Answered.
+          </p>
+          <p *ngIf="!question.answered" class="question-description" style="color: red"> This Question has NOT been
+            Answered.</p>
+        </ion-label>
       </ion-item>
-      <ion-item href="https://ionicframework.com/docs/building/scaffolding">
-        <ion-icon slot="start" color="medium" name="build"></ion-icon>
-        <ion-label>Scaffold Out Your App</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/layout/structure">
-        <ion-icon slot="start" color="medium" name="grid"></ion-icon>
-        <ion-label>Change Your App Layout</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/theming/basics">
-        <ion-icon slot="start" color="medium" name="color-fill"></ion-icon>
-        <ion-label>Theme Your App</ion-label>
-      </ion-item>
-    </ion-list>
+
+      <!-- HEART EMOJI -->
+      <ion-item-options *ngIf="!question.liked" side="start">
+        <ion-item-option color="love" (click)="likeQuestion(true, question, question.id)">
+          <ion-icon slot="icon-only" color="danger" name="heart"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+
+      <!-- SAD FACE EMOJI -->
+      <ion-item-options *ngIf="question.liked" side="start">
+        <ion-item-option color="warning" (click)="likeQuestion(false, question, question.id)">
+          <ion-icon slot="icon-only" color="dark" name="sad"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+
+      <!-- TRASH EMOJI -->
+      <ion-item-options side="end">
+        <ion-item-option color="danger" (click)="removeQuestion(question.id)">
+          <ion-icon slot="icon-only" name="trash"></ion-icon>
+        </ion-item-option>
+        <!-- CHECK EMOJI -->
+        <ion-item-option color="answer" (click)="archiveQuestion(question, question.id)" [disabled]="!question.answered">
+          <ion-icon slot="icon-only" name="archive"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+  </ion-list>
 </ion-content>
+
+<!-- fab placed to the bottom end -->
+<ion-fab vertical="bottom" horizontal="end" slot="fixed">
+  <ion-fab-button color="danger" (click)="presentCreateQuestionModal()">
+    <ion-icon name="add" color="light"></ion-icon>
+  </ion-fab-button>
+</ion-fab>
