--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -2,3 +2,18 @@
   max-height: 35vh;
   overflow: hidden;
 }
+
+.list-title {
+  font-size: 25px;
+}
+
+.icon-size {
+  font-size: 25px
+}
+
+
+.question-description {
+  font-style: italic;
+}
+
+
